2004-12-20  Alexander Larsson  <alexl@redhat.com>

	* src/icrect.c: (pixman_fill_rect_8bbp), (pixman_fill_rect_32bbp),
	(pixman_fill_rect_general), (pixman_color_rects),
	(pixman_fill_rectangles):
	Special case solid color rectangle fills.

2004-10-28  Carl Worth  <cworth@cworth.org>

	* Makefile.am (release-verify-newer): Abort release-publish if
	there's already a published tar file with the current version.
	(release-publish): Add code to update the LATEST-package-version
	file.

2004-10-27  Carl Worth  <cworth@cworth.org>

	* RELEASING: Put the tag command back which was accidentally
	removed from the instructions.

	* NEWS: Update date since 0.1.2 release didn't get pushed out
	until today.

	* RELEASING: Update release instructions to include new
	release-publish target.
	Suggest "cvs -q update -Ad" as an alternative to checkout.

	* Makefile.am (release-publish): Add release-check and
	release-publish targets to simplify the release process.

2004-10-13  Carl Worth  <cworth@cworth.org>

	* NEWS: Add notes for snapshot 0.1.2

	* configure.in: Increment version to 0.1.2

	* src/icint.h (MOD): 
	* src/iccompose.c (IcFetch_transform): 
	* src/ic.c (pixman_composite): Switch from two different buggy mod
	macros to a new MOD macro which should work in C89 or C99.

2004-09-12  David Reveman  <c99drn@cs.umu.se>

	* src/icformat.c (pixman_format_init): pixman_format_init expects
	that all variables not touched are zero. We need to add a memset
	here to make that true.
	Added pixman_format_get_masks, which allow clients to get the
	masks from a format.

	* src/icimage.c: Added the implementation of pixman_image_get_format,
	which was missing.

	* src/icint.h: slim_hidden_proto pixman_image_set_component_alpha.

	* src/pixman.h: Added pixman_image_set_component_alpha, making it
	possible to use component alpha.

	* src/icimage.c (pixman_image_set_clip_region): Make a copy of
	the client owned region.
	(IcComputeCompositeRegion): Intersect possible client region.